react_dapp/deploy/dapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapp-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "react_dapp"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
