react_dapp/deploy/dapp-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: dapp-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress-class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: dapp.filipmacek.io
      http:
        paths:
          - backend:
              serviceName: dapp-service
              servicePort: 80
  tls:
    - hosts:
        - dapp.filipmacek.io
      secretName: frontend-secret
